styles/stylesAll.css
/* ... */
 /* Styles the select nav button */
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
     color: black;
     background-color: white;
 }


 /***END NAVBAR****/
 /*****************/

 .footerRow{
     margin-top: 50px;
     padding-top: 50px;
     letter-spacing: -2px;
     text-align: right;
     bottom: 0;
     right: 0;
 }

 .portfolioItemContainer:hover .zoomGlyph{
   display: block;
 }

 .portfolioItemContainer{
   float:right;
   position: relative;
 }

 @media(min-width:768px){
   .portfolioItemContainer{
     padding-left: 20px;
   }
 }

 .zoomGlyph{
   position: absolute;
   display: none;
   left: 30px;
   top: 10px;
   z-index: 100;
 }

 #loadingDiv{
   display:none;
   position:fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 70px;
 }

 .typed-cursor{
     display:none;
 }

 .titleDiv{
   position: absolute;
   /*top: 0;
   left: 0;
   background-color: white;*/
   width:100%;
   /*filter:opacity(80%);*/
   padding: 8px 20px 0 20px;
   margin: 0 0 0 0;
   z-index: 999;

   /* Fallback for web browsers that don't support RGBa */
   background-color: rgb(255, 255, 255);
   /* RGBa with 0.6 opacity */
   background-color: rgba(255, 255, 255, 0.8);
   /* For IE 5.5 - 7*/
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
   /* For IE 8*/
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
 }

 .hoverTitleLink{
     text-decoration: none;
     color: black;
 }

.hoverTitleLink:hover{
    text-decoration: none;
    color: black;
}

.hoverTitleLink:active{
    text-decoration: none;
    color: black;
}

